# mobile-payments

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: publish.yml
docs/: index.md
mobile_payments/: constants.py  open_api.py  vodacom.py
tests/: test_business2business.py  test_business2customer.py  test_mobile_payments.py  test_mpesa_customer2business.py  test_mpesa_reversal.py  test_vodacom_mpesa.py
